apps/home-assistant/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant-proxy
  namespace: apps
subsets:
  - addresses:
      - ip: 10.0.0.3
    ports:
      - port: 8123
