apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: apps
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8123
  selector:
    app: home-assistant
  type: ClusterIP
